<resources>
    <string name="app_name">Countdown</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enterTitle">Title</string>
    <string name="pickAdate">Pick a date</string>
    <string name="defaultDaysLeft">0 Day</string>
    <string name="memo">Memo</string>

    <string-array name="notify_minutes_array">
        <item>五分鐘</item>
        <item>十分鐘</item>
        <item>二十分鐘</item>

    </string-array>

    <string-array name="notify_minutes_value_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>

    </string-array>
    <string-array name="reminder_interval">
        <item>@string/everyday</item>
        <item>@string/mon2fri</item>
        <item>@string/customDays</item>
    </string-array>
    <string-array name="reminder_days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <string name="everyday">Everyday</string>
    <string name="mon2fri">Monday to Friday</string>
    <string name="customDays">Custom</string>
    <string name="notification">Notification</string>
    <string name="unsorted">Unsorted</string>
    <string name="category">Category</string>
    <string name="all">All</string>

    <string name="life">Life</string>
    <string name="work">Work</string>
    <string name="exam">Exam</string>
    <string name="anniversary">Anniversary</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="day_unit">days</string>
    <string name="left_en">left</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="Widget_4to1">widget_4to1</string>
    <string name="Widget_1to1">widget_1to1</string>
    <string name="chooseTheme">Theme:</string>
    <string name="coder">Author：saturncoder</string>
    <string name="pleaseRate">Give a 5-Star Rating!</string>
    <string name="version">Version：1.0.0</string>
    <string name="daysleftSentence">%1$n days %2$s</string>
    <string name="pleaseTypeTitle">Please enter event title!</string>
    <string name="notAvailableForPastEvent">Notification is not available for past events</string>
    <string name="noCameraDetected">No camera detected in this device!</string>
    <string name="notSupportedImageDatatype">Not supported image datatype!</string>
    <string name="pleaseChooseDate">Please set the event date</string>
    <string name="onlyThreeCategoryAllowed">Only 3 custom categories are available</string>
    <string name="chooseNotifTime">Notification time:</string>
    <string name="chooseNotifFreq">Notification frequence:</string>
    <string name="confirmButtonText">OK</string>
    <string name="negativeButtonText">Cancel</string>
    <string name="chooseCategory">Pick a category</string>
    <string name="addaCategory">create a new category</string>
    <string name="errorNotification">Notification</string>
    <string name="eneterCategoryName">Set the category name</string>
    <string name="iconCollection">Icon set</string>
    <string name="pleaseEnterCategoryName">Please enter a category name</string>
    <string name="deleteCategory">Delete the category</string>
    <string name="allItemBecomeUnsorted">All items in this category will be sorted to \"Unsroted\" category.</string>
    <string name="editCategoryName">Enter new category name</string>
    <string name="itemRemoved">Item removed !</string>
    <string name="undo">Undo</string>
    <string name="noItemNotice">There is no item in this category yet. How about create one?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
