<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_item_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="35dp"
                app:srcCompat="@drawable/app_icon"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="45dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enterTitle"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView_item_eventTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_notifications_black_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/pickAdate"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="45dp" />

                <TextView
                    android:id="@+id/textView_item_daysbetween"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/defaultDaysLeft"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="81dp" />

                <TextView
                    android:id="@+id/textView_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_tag_grey_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/unsorted" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/switch_reminder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_notifications_black_24dp"
            android:drawablePadding="8dp"
            android:paddingLeft="8dp"
            android:text="@string/notification"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reminder_interval"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:clickable="false"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/everyday"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible" />

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:clickable="false"
            android:gravity="center"
            android:text="00:00"
            android:textColor="@android:color/darker_gray" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/editText_memo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="top"
            android:hint="@string/memo"

            android:inputType="textMultiLine"
            android:maxHeight="100dp"
            android:maxLength="300"
            android:paddingLeft="8dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</LinearLayout>